--- a/wildlife/style.css
+++ b/wildlife/style.css
@@ -11,11 +11,11 @@
   display: flex;
   justify-content: center;
   padding-top: 79px;
-  background-color: #02160b
+  background-color: rgb(0, 255, 76);
 }
 
 .background {
-  background-color: #02160b;
+  background-color: rgba(0, 255, 76, 0.514);
   width: 100%;
   max-width: 1440px;
   height: 780px;
@@ -64,11 +64,11 @@ button {
   box-sizing: border-box;
   border-radius: 5px;
   background-color: Transparent;
-  color: white;      
+  color: black;      
 }
 
 a {
-  color: rgba(247, 247, 247, 1);
+  color: black;
 }
 
 .menu__items:hover {
@@ -126,7 +126,7 @@ a {
   line-height: 27px;
   letter-spacing: 0em;
   text-align: justify;
-  color:rgba(247, 247, 247, 1);
+  color:black;
   width: 274px;
   height: 108px;
 }
@@ -142,12 +142,13 @@ a {
   line-height: 27px;
   letter-spacing: 0em;
   text-align: center;
-  color: rgba(247, 247, 247, 1);
+  color: rgb(0, 0, 0);
 }
 
 .Donate1 {
-  background: rgba(139, 0, 255, 1);
+  background: rgb(195, 255, 0);
   border-radius: 5%;
+  color: black;
   width: 160px;
   height: 60px;
   -webkit-transition: 500ms ease;
