--- a/wildlife/style.css
+++ b/wildlife/style.css
@@ -5,20 +5,14 @@
   box-sizing: border-box;
 }
 
-.wrapper {
-  z-index: -1;
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  padding-top: 79px;
-  background-color: rgb(0, 255, 76);
-}
+
 
 .background {
-  background-color: rgba(0, 255, 76, 0.514);
+  background: url(./fox.png);
   width: 100%;
-  max-width: 1440px;
-  height: 780px;
+  height: 1000px;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .header {
@@ -64,11 +58,11 @@ button {
   box-sizing: border-box;
   border-radius: 5px;
   background-color: Transparent;
-  color: black;      
+  color: white;      
 }
 
 a {
-  color: black;
+  color: white;
 }
 
 .menu__items:hover {
@@ -126,7 +120,7 @@ a {
   line-height: 27px;
   letter-spacing: 0em;
   text-align: justify;
-  color:black;
+  color:white;
   width: 274px;
   height: 108px;
 }
@@ -146,7 +140,7 @@ a {
 }
 
 .Donate1 {
-  background: rgb(195, 255, 0);
+  background: rgb(0, 174, 255);
   border-radius: 5%;
   color: black;
   width: 160px;
